Add grid styling and images

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>LinkedIn Hackathon | Kid's Game</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <link rel="stylesheet" href="css/normalize.css">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
@@ -21,8 +22,47 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <div class="container">
+            <h1>Kid's Game</h1>
+            <section class="grid">
+                <div class="inner-grid">
+                    <div class="row">
+                        <div class="col-md-4">&nbsp;</div>
+                        <div class="col-md-4">&nbsp;</div>
+                        <div class="col-md-4">&nbsp;</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">&nbsp;</div>
+                        <div class="col-md-4">&nbsp;</div>
+                        <div class="col-md-4">&nbsp;</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">&nbsp;</div>
+                        <div class="col-md-4">&nbsp;</div>
+                        <div class="col-md-4">&nbsp;</div>
+                    </div>
+                </div>
+            </section>
+            <section class="pics">
+                <div class="inner-pics">
+                    <div class="row">
+                        <div class="col-md-4"><span class="img img-bird"></span></div>
+                        <div class="col-md-4"><span class="img img-giraffe"></span></div>
+                        <div class="col-md-4"><span class="img img-elephant"></span></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4"><span class="img img-lion"></span></div>
+                        <div class="col-md-4"><span class="img img-monkey"></span></div>
+                        <div class="col-md-4"><span class="img img-penguin"></span></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4"><span class="img img-seahorse"></span></div>
+                        <div class="col-md-4"><span class="img img-snake"></span></div>
+                        <div class="col-md-4"><span class="img img-turtle"></span></div>
+                    </div>
+                </div>
+            </section>
+        </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
