Update images to list, fix column

--- a/index.html
+++ b/index.html
@@ -24,44 +24,46 @@
 
         <div class="container">
             <h1>Kid's Game</h1>
-            <section class="grid">
-                <div class="inner-grid">
-                    <div class="row">
-                        <div class="col-md-4">&nbsp;</div>
-                        <div class="col-md-4">&nbsp;</div>
-                        <div class="col-md-4">&nbsp;</div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4">&nbsp;</div>
-                        <div class="col-md-4">&nbsp;</div>
-                        <div class="col-md-4">&nbsp;</div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4">&nbsp;</div>
-                        <div class="col-md-4">&nbsp;</div>
-                        <div class="col-md-4">&nbsp;</div>
-                    </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <section class="grid">
+                        <div class="inner-grid">
+                            <div class="row">
+                                <div class="col-md-4">&nbsp;</div>
+                                <div class="col-md-4">&nbsp;</div>
+                                <div class="col-md-4">&nbsp;</div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-4">&nbsp;</div>
+                                <div class="col-md-4">&nbsp;</div>
+                                <div class="col-md-4">&nbsp;</div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-4">&nbsp;</div>
+                                <div class="col-md-4">&nbsp;</div>
+                                <div class="col-md-4">&nbsp;</div>
+                            </div>
+                        </div>
+                    </section>
                 </div>
-            </section>
-            <section class="pics">
-                <div class="inner-pics">
-                    <div class="row">
-                        <div class="col-md-4"><span class="img img-bird"></span></div>
-                        <div class="col-md-4"><span class="img img-giraffe"></span></div>
-                        <div class="col-md-4"><span class="img img-elephant"></span></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4"><span class="img img-lion"></span></div>
-                        <div class="col-md-4"><span class="img img-monkey"></span></div>
-                        <div class="col-md-4"><span class="img img-penguin"></span></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4"><span class="img img-seahorse"></span></div>
-                        <div class="col-md-4"><span class="img img-snake"></span></div>
-                        <div class="col-md-4"><span class="img img-turtle"></span></div>
-                    </div>
+                <div class="col-md-6">
+                    <section class="pics">
+                        <div class="inner-pics">
+                            <ul class="">
+                                <li class="pic-4"><span class="img img-bird"></span></li>
+                                <li class="pic-4"><span class="img img-giraffe"></span></li>
+                                <li class="pic-4"><span class="img img-elephant"></span></li>
+                                <li class="pic-4"><span class="img img-lion"></span></li>
+                                <li class="pic-4"><span class="img img-monkey"></span></li>
+                                <li class="pic-4"><span class="img img-penguin"></span></li>
+                                <li class="pic-4"><span class="img img-seahorse"></span></li>
+                                <li class="pic-4"><span class="img img-snake"></span></li>
+                                <li class="pic-4"><span class="img img-turtle"></span></li>
+                            </ul>
+                        </div>
+                    </section>
                 </div>
-            </section>
+            </div>
         </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
