--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <![endif]-->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,28 +27,26 @@
             <section class="grid">
                 <div class="inner-grid">
                     <div class="row">
-                        <div id="space1" class="col-md-4">&nbsp;</div>
-                        <div id="space2" class="col-md-4">&nbsp;</div>
-                        <div id="space3" class="col-md-4">&nbsp;</div>
+                        <div id="space1" class="col-md-4"></div>
+                        <div id="space2" class="col-md-4"></div>
+                        <div id="space3" class="col-md-4"></div>
                     </div>
                     <div class="row">
-                        <div id="space4" class="col-md-4">&nbsp;</div>
-                        <div id="space5" class="col-md-4">&nbsp;</div>
-                        <div id="space6" class="col-md-4">&nbsp;</div>
+                        <div id="space4" class="col-md-4"></div>
+                        <div id="space5" class="col-md-4"></div>
+                        <div id="space6" class="col-md-4"></div>
                     </div>
                     <div class="row">
-                        <div id="space7" class="col-md-4">&nbsp;</div>
-                        <div id="space8" class="col-md-4">&nbsp;</div>
-                        <div id="space9" class="col-md-4">&nbsp;</div>
+                        <div id="space7" class="col-md-4"></div>
+                        <div id="space8" class="col-md-4"></div>
+                        <div id="space9" class="col-md-4"></div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <section class="pics">
                         <div class="inner-pics">
                             <ul class="">
-                                <li class="pic-4"><span class="img img-bird"></span></li>
                                 <li class="pic-4"><span class="img img-giraffe"></span></li>
-                                <li class="pic-4"><span class="img img-elephant"></span></li>
                                 <li class="pic-4"><span class="img img-lion"></span></li>
                                 <li class="pic-4"><span class="img img-monkey"></span></li>
                                 <li class="pic-4"><span class="img img-penguin"></span></li>
@@ -62,23 +60,15 @@
             </div>
         </div>
 		
+		<div class="container">
+			<label id="debug"></label>
+		</div>
+		
 		<audio id="audioTest">
 			<source src="audio\test.wav" type="audio/wav" />
 		</audio>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
     </body>
 </html>
