--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
             </div>
         </div>
 		
+	<button type="button" id="startBtn" onclick="Initialize()">Start</button>
+
 		<div class="container">
 			<label id="debug"></label>
 		</div>
