--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
                 <div class="col-md-6">
                     <section class="pics">
                         <div class="inner-pics">
-                            <ul class="">
-                                <li class="pic-4"><span class="img img-giraffe"></span></li>
-                                <li class="pic-4"><span class="img img-lion"></span></li>
-                                <li class="pic-4"><span class="img img-monkey"></span></li>
-                                <li class="pic-4"><span class="img img-penguin"></span></li>
-                                <li class="pic-4"><span class="img img-seahorse"></span></li>
-                                <li class="pic-4"><span class="img img-snake"></span></li>
-                                <li class="pic-4"><span class="img img-turtle"></span></li>
+                            <ul id="objectsList" class="">
+                                <li id="giraffe" class="pic-4"><span class="img img-giraffe"></span></li>
+                                <li id="lion" class="pic-4"><span class="img img-lion"></span></li>
+                                <li id="monkey" class="pic-4"><span class="img img-monkey"></span></li>
+                                <li id="penguin" class="pic-4"><span class="img img-penguin"></span></li>
+                                <li id="seahorse" class="pic-4"><span class="img img-seahorse"></span></li>
+                                <li id="snake" class="pic-4"><span class="img img-snake"></span></li>
+                                <li id="turtle" class="pic-4"><span class="img img-turtle"></span></li>
                             </ul>
                         </div>
                     </section>
