--- a/index.html
+++ b/index.html
@@ -60,14 +60,50 @@
             </div>
         </div>
 		
-	<button type="button" id="startBtn" onclick="Initialize()">Start</button>
+		<button type="button" id="startBtn" onclick="Initialize()">Start Game</button>
 
 		<div class="container">
 			<label id="debug"></label>
 		</div>
 		
-		<audio id="audioTest">
-			<source src="audio\test.wav" type="audio/wav" />
+		<audio id="audioAbove">
+			<source src="audio\above_the.wav" type="audio/wav" />
+		</audio>
+		<audio id="audioBelow">
+			<source src="audio\below_the.wav" type="audio/wav" />
+		</audio>
+		<audio id="audioBeside">
+			<source src="audio\beside_the.wav" type="audio/wav" />
+		</audio>
+		<audio id="audioBird">
+			<source src="audio\bird.wav" type="audio/wav" />
+		</audio>
+		<audio id="audioElephant">
+			<source src="audio\elephant.wav" type="audio/wav" />
+		</audio>
+		<audio id="audioGiraffe">
+			<source src="audio\giraffe.wav" type="audio/wav" />
+		</audio>
+		<audio id="audioLion">
+			<source src="audio\lion.wav" type="audio/wav" />
+		</audio>
+		<audio id="audioMonkey">
+			<source src="audio\monkey.wav" type="audio/wav" />
+		</audio>
+		<audio id="audioPenguin">
+			<source src="audio\penguin.wav" type="audio/wav" />
+		</audio>
+		<audio id="audioPut">
+			<source src="audio\put_the.wav" type="audio/wav" />
+		</audio>
+		<audio id="audioSeahorse">
+			<source src="audio\seahorse.wav" type="audio/wav" />
+		</audio>
+		<audio id="audioSnake">
+			<source src="audio\snake.wav" type="audio/wav" />
+		</audio>
+		<audio id="audioTurtle">
+			<source src="audio\turtle.wav" type="audio/wav" />
 		</audio>
 
         <script src="js/plugins.js"></script>
