--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <![endif]-->
 
         <div class="container">
-            <h1>Kid's Game</h1>
-            <section class="grid">
+            <h1>Learning Prepositions</h1>
+            <section id="content" class="grid">
                 <div class="inner-grid">
                     <div class="row">
                         <div id="space1" class="col-md-4"></div>
@@ -106,6 +106,9 @@
 			<source src="audio\turtle.wav" type="audio/wav" />
 		</audio>
 
+		<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+		<script src="http://code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>
+		<script src="js/vendor/jquery.ui.touch-punch.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
     </body>
