Add page background and make button bigger

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
         </div>
 		
-		<button type="button" id="startBtn" onclick="Initialize()" class="btn btn-info">Start Game</button>
+		<button type="button" id="startBtn" onclick="Initialize()" class="btn btn-lg btn-success">Start Game</button>
 
 		<div class="container">
 			<label id="debug"></label>
