--- a/index.html
+++ b/index.html
@@ -46,13 +46,6 @@
                     <section class="pics">
                         <div class="inner-pics">
                             <ul id="objectsList" class="">
-                                <li id="giraffe" class="pic-4"><span class="img img-giraffe"></span></li>
-                                <li id="lion" class="pic-4"><span class="img img-lion"></span></li>
-                                <li id="monkey" class="pic-4"><span class="img img-monkey"></span></li>
-                                <li id="penguin" class="pic-4"><span class="img img-penguin"></span></li>
-                                <li id="seahorse" class="pic-4"><span class="img img-seahorse"></span></li>
-                                <li id="snake" class="pic-4"><span class="img img-snake"></span></li>
-                                <li id="turtle" class="pic-4"><span class="img img-turtle"></span></li>
                             </ul>
                         </div>
                     </section>
@@ -75,34 +68,34 @@
 		<audio id="audioBeside">
 			<source src="audio\beside_the.wav" type="audio/wav" />
 		</audio>
-		<audio id="audioBird">
+		<audio id="audiobird">
 			<source src="audio\bird.wav" type="audio/wav" />
 		</audio>
-		<audio id="audioElephant">
+		<audio id="audioelephant">
 			<source src="audio\elephant.wav" type="audio/wav" />
 		</audio>
-		<audio id="audioGiraffe">
+		<audio id="audiogiraffe">
 			<source src="audio\giraffe.wav" type="audio/wav" />
 		</audio>
-		<audio id="audioLion">
+		<audio id="audiolion">
 			<source src="audio\lion.wav" type="audio/wav" />
 		</audio>
-		<audio id="audioMonkey">
+		<audio id="audiomonkey">
 			<source src="audio\monkey.wav" type="audio/wav" />
 		</audio>
-		<audio id="audioPenguin">
+		<audio id="audiopenguin">
 			<source src="audio\penguin.wav" type="audio/wav" />
 		</audio>
 		<audio id="audioPut">
 			<source src="audio\put_the.wav" type="audio/wav" />
 		</audio>
-		<audio id="audioSeahorse">
+		<audio id="audioseahorse">
 			<source src="audio\seahorse.wav" type="audio/wav" />
 		</audio>
-		<audio id="audioSnake">
+		<audio id="audiosnake">
 			<source src="audio\snake.wav" type="audio/wav" />
 		</audio>
-		<audio id="audioTurtle">
+		<audio id="audioturtle">
 			<source src="audio\turtle.wav" type="audio/wav" />
 		</audio>
 
