--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
         </div>
 		
-		<button type="button" id="startBtn" onclick="Initialize()" class="btn btn-lg btn-success">Start Game</button>
+		<input type="button" id="startBtn" value="Start Game" onclick="Initialize()" class="btn btn-lg btn-success"></input>
 
 		<div class="container">
 			<label id="debug"></label>
