Added label below the images

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                             </ul>
                         </div>
                     </section>
+				<p id="animalName" class="nameLabel"></p>
                 </div>
             </div>
         </div>
