--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
 		<audio id="audioturtle">
 			<source src="audio\turtle.wav" type="audio/wav" />
 		</audio>
+		<audio id="audioSuccess">
+			<source src="audio\bell.wav" type="audio/wav" />
+		</audio>
 
 		<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
 		<script src="http://code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>
