--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <![endif]-->
 
         <div class="container">
-            <h1>Learning Prepositions</h1>
+            <img src="img/gametitle.png" alt="I love to learn" height="170" width="245">
             <section id="content" class="grid">
                 <div class="inner-grid">
                     <div class="row">
@@ -49,7 +49,6 @@
                             </ul>
                         </div>
                     </section>
-				<p id="animalName" class="nameLabel"></p>
                 </div>
             </div>
         </div>
