--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
                             </ul>
                         </div>
                     </section>
+					<p id="animalName" class="nameLabel"></p>
                 </div>
-            </div>
+            </section>
         </div>
 		
 		<input type="button" id="startBtn" value="Start Game" onclick="Initialize()" class="btn btn-lg btn-success"></input>
