--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
         <div class="container">
             <img src="img/gametitle.png" alt="I love to learn" height="170" width="245">
+			&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+			<input type="button" id="startBtn" value="Start Game" onclick="Initialize()" class="btn btn-lg btn-success"></input>
             <section id="content" class="grid">
                 <div class="inner-grid">
                     <div class="row">
@@ -53,8 +55,6 @@
                 </div>
             </section>
         </div>
-		
-		<input type="button" id="startBtn" value="Start Game" onclick="Initialize()" class="btn btn-lg btn-success"></input>
 
 		<div class="container">
 			<label id="debug"></label>
